@@ -2,12 +2,19 @@
 
 language: c
 sudo: required
-dist: bionic
+dist: focal
 
 jobs:
   include:
-    - name: r-4.0
-      env: R_VERSION="4.0"
+    - name: linux
+      os: linux
+    - name: macOS
+      os: osx
+
+env:
+  global:
+    - USE_BSPM="true"
+    - _R_CHECK_FORCE_SUGGESTS_="false"
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
@@ -16,8 +23,7 @@ before_install:
   - ./run.sh bootstrap
 
 install:
-  - ./run.sh install_aptget r-cran-rcpp r-cran-bh r-cran-tinytest
-  - ./run.sh install_r gettz
+  - ./run.sh install_all
 
 script:
   - ./run.sh run_tests
